1vpc2subnet4vm2nsg.json
{
	"AWSTemplateFormatVersion": "2010-09-09",

	"Description": "TTND AWS CloudFormation template to launch first instance",

	"Parameters": {

		"KeyName": {
            "Description" : "Name of an existing EC2 KeyPair to enable SSH access to the instance",
            "Type": "AWS::EC2::KeyPair::KeyName",
            "Default" : "slinger_testing",
            "ConstraintDescription" : "must be the name of an existing EC2 KeyPair."
        },

		"InstanceType": {
			"Description": "Instance1 EC2 instance type",
			"Type": "String",
			"Default": "c4.xlarge",
			"AllowedValues": ["t2.micro", "m1.small", "m1.medium", "m1.large", "m1.xlarge", "m2.xlarge", "m2.2xlarge", "m2.4xlarge", "m3.medium", "m3.xlarge", "c4.xlarge", "c4.4xlarge", "m3.2xlarge", "c1.medium", "c1.xlarge", "cc1.4xlarge", "c4.large", "cc2.8xlarge", "cg1.4xlarge"],
			"ConstraintDescription": "must be a valid EC2 instance type."
		}
    },
	"Mappings": {
		"AWSInstanceType2Arch": {
			"t2.micro": {
				"Arch": "64"
			},
			"t2.small": {
				"Arch": "64"
			},
			"t2.medium": {
				"Arch": "64"
			},
			"t2.large": {
				"Arch": "64"
			},
			"m3.medium": {
				"Arch": "64"
			},
			"m4.large": {
				"Arch": "64"
			},
			"m4.xlarge": {
				"Arch": "64"
			},
			"m4.2xlarge": {
				"Arch": "64"
			}
		},

		"InstanceAMI": {
			"us-east-2": {
				"64": "ami-f6035893"
			}
        }
    },
		"Resources": {

			"VPC": {
				"Type": "AWS::EC2::VPC",
				"Properties": {
					"CidrBlock": "10.0.0.0/16"
				}
			},

			"WebSubnet": {
				"Type": "AWS::EC2::Subnet",
				"Properties": {
					"VpcId": {
						"Ref": "VPC"
					},
					"CidrBlock": "10.0.0.0/24"
				}
            },
            "AppSubnet": {
				"Type": "AWS::EC2::Subnet",
				"Properties": {
					"VpcId": {
						"Ref": "VPC"
					},
					"CidrBlock": "10.0.1.0/24"
				}
			},
			"InstanceSecurityGroup1": {
				"Type": "AWS::EC2::SecurityGroup",
				"Properties": {
					"GroupDescription": "Enable HTTP access",
					"VpcId": {
						"Ref": "VPC"
					},
					"SecurityGroupIngress": [{
							"IpProtocol": "tcp",
							"FromPort": "22",
							"ToPort": "22",
							"CidrIp": "0.0.0.0/0"
						},
						{
							"IpProtocol": "tcp",
							"FromPort": "80",
							"ToPort": "80",
							"CidrIp": "0.0.0.0/0"
						}
					]
				}
            },
            "InstanceSecurityGroup2": {
				"Type": "AWS::EC2::SecurityGroup",
				"Properties": {
					"GroupDescription": "Enable HTTP access",
					"VpcId": {
						"Ref": "VPC"
					},
					"SecurityGroupIngress": [{
							"IpProtocol": "tcp",
							"FromPort": "22",
							"ToPort": "22",
							"CidrIp": "0.0.0.0/0"
						},
						{
							"IpProtocol": "tcp",
							"FromPort": "80",
							"ToPort": "80",
							"CidrIp": "0.0.0.0/0"
						}
					]
				}
			},

			"WebInstance1": {
				"Type": "AWS::EC2::Instance",
				"Properties": {
					"KeyName": {
						"Ref": "KeyName"
					},
					"InstanceType": {
						"Ref": "InstanceType"
					},
					"ImageId": {
						"Fn::FindInMap": ["InstanceAMI", {
								"Ref": "AWS::Region"
							},
							{
								"Fn::FindInMap": ["AWSInstanceType2Arch", {
										"Ref": "InstanceType"
									},
									"Arch"
								]
							}
						]
					},
					"NetworkInterfaces": [{
						"DeviceIndex": "0",
						"AssociatePublicIpAddress": "false",
						"DeleteOnTermination": "true",
						"SubnetId": {
							"Ref": "WebSubnet"
						},
						"GroupSet": [{
							"Ref": "InstanceSecurityGroup1"
						}]
					}]
				}
			},
            "WebInstance2": {
				"Type": "AWS::EC2::Instance",
				"Properties": {
					"KeyName": {
						"Ref": "KeyName"
					},
					"InstanceType": {
						"Ref": "InstanceType"
					},
					"ImageId": {
						"Fn::FindInMap": ["InstanceAMI", {
								"Ref": "AWS::Region"
							},
							{
								"Fn::FindInMap": ["AWSInstanceType2Arch", {
										"Ref": "InstanceType"
									},
									"Arch"
								]
							}
						]
					},
					"NetworkInterfaces": [{
						"DeviceIndex": "0",
						"AssociatePublicIpAddress": "false",
						"DeleteOnTermination": "true",
						"SubnetId": {
							"Ref": "WebSubnet"
						},
						"GroupSet": [{
							"Ref": "InstanceSecurityGroup1"
						}]
					}]
				}
            },
            "AppInstance1": {
				"Type": "AWS::EC2::Instance",
				"Properties": {
					"KeyName": {
						"Ref": "KeyName"
					},
					"InstanceType": {
						"Ref": "InstanceType"
					},
					"ImageId": {
						"Fn::FindInMap": ["InstanceAMI", {
								"Ref": "AWS::Region"
							},
							{
								"Fn::FindInMap": ["AWSInstanceType2Arch", {
										"Ref": "InstanceType"
									},
									"Arch"
								]
							}
						]
					},
					"NetworkInterfaces": [{
						"DeviceIndex": "0",
						"AssociatePublicIpAddress": "false",
						"DeleteOnTermination": "true",
						"SubnetId": {
							"Ref": "AppSubnet"
						},
						"GroupSet": [{
							"Ref": "InstanceSecurityGroup2"
						}]
					}]
				}
            },
            "AppInstance2": {
				"Type": "AWS::EC2::Instance",
				"Properties": {
					"KeyName": {
						"Ref": "KeyName"
					},
					"InstanceType": {
						"Ref": "InstanceType"
					},
					"ImageId": {
						"Fn::FindInMap": ["InstanceAMI", {
								"Ref": "AWS::Region"
							},
							{
								"Fn::FindInMap": ["AWSInstanceType2Arch", {
										"Ref": "InstanceType"
									},
									"Arch"
								]
							}
						]
					},
					"NetworkInterfaces": [{
						"DeviceIndex": "0",
						"AssociatePublicIpAddress": "false",
						"DeleteOnTermination": "true",
						"SubnetId": {
							"Ref": "AppSubnet"
						},
						"GroupSet": [{
							"Ref": "InstanceSecurityGroup2"
						}]
					}]
				}
			}
        }
    }
